feat(winui): Implement MVVM structure, ViewModels and Mocked comm layer

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LanguageSelectionRestartNeeded.Title" xml:space="preserve">
-    <value>Restart required</value>
-  </data>
   <data name="LanguageSelectionRestartNeeded.Message" xml:space="preserve">
     <value>Language changed. Please restart the application to apply the new language settings.</value>
   </data>
@@ -140,5 +137,8 @@
   </data>
   <data name="NavFolder.Content" xml:space="preserve">
     <value>kDrive folder</value>
+  </data>
+  <data name="SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Search in {{ TODO }}</value>
   </data>
 </root>
