--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -117,10 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LanguageSelectionRestartNeeded.Title" xml:space="preserve">
-    <value>Redémarrage requis</value>
-    <comment>Title of the infobar asking for a restart after a language change</comment>
-  </data>
   <data name="LanguageSelectionRestartNeeded.Message" xml:space="preserve">
     <value>Langue modifiée. Veuillez redémarrer l’application pour appliquer les nouveaux paramètres linguistiques.</value>
     <comment>Message of the infobar asking for a restart after a language change</comment>
@@ -144,5 +140,8 @@
   </data>
   <data name="NavFolder.Content" xml:space="preserve">
     <value>Dossier kDrive</value>
+  </data>
+  <data name="SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Rechercher dans {{ TODO }}</value>
   </data>
 </root>
