--- a/src/gui4/windows/kDrive client/kDrive client/Strings/it-IT/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/it-IT/Resources.resw
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LanguageSelectionRestartNeeded.Title" xml:space="preserve">
-    <value />
-  </data>
   <data name="LanguageSelectionRestartNeeded.Message" xml:space="preserve">
     <value />
   </data>
@@ -139,6 +136,9 @@
     <value />
   </data>
   <data name="NavFolder.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SearchBox.PlaceholderText" xml:space="preserve">
     <value />
   </data>
 </root>
