feat: Add collapsable section

--- a/src/front/macOS/kDrive/Resources/Localizable.xcstrings
+++ b/src/front/macOS/kDrive/Resources/Localizable.xcstrings
@@ -39,6 +39,12 @@
         }
       }
     },
+    "Synchronisations" : {
+
+    },
+    "tab.title" : {
+
+    },
     "tabTitleActivity" : {
       "extractionState" : "manual",
       "localizations" : {
