--- a/src/gui4/windows/kDrive client/kDrive client/Strings/es-ES/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/es-ES/Resources.resw
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LanguageSelectionRestartNeeded.Message" xml:space="preserve">
-    <value />
-  </data>
   <data name="TrayIconExitApplicationCommand.Label" xml:space="preserve">
     <value />
   </data>
@@ -139,6 +136,30 @@
     <value />
   </data>
   <data name="SearchBox.PlaceholderText" xml:space="preserve">
+    <value />
+  </data>
+  <data name="HomePage_favorites.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="HomePage_trash.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="HomePage_shared.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="KSuiteUpgradeBar_link.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="InfomabiakWebSiteLanguageCode" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UpdateAvailableBar_message.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="KSuiteUpgradeBar_message.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UpdateAvailableBar_link.Content" xml:space="preserve">
     <value />
   </data>
 </root>
