feat: Add SyncErrorBar and update ActivityPage layout
- Introduced SyncErrorBar to display synchronization errors.
- Updated ActivityPage.xaml to include SyncStatusBar and SyncErrorBar.
- Added localization support for SyncErrorBar messages.
- Removed window size change handling in TrayIconManager.
- Included new SVG icon for warning in SyncErrorBar.
- Created SyncErrorBar.xaml and SyncErrorBar.xaml.cs for UI and logic.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -177,4 +177,10 @@
   <data name="SyncStatusBar_SyncedStatus.Text" xml:space="preserve">
     <value />
   </data>
+  <data name="SyncErrorBar_message.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SyncErrorBar_button.Content" xml:space="preserve">
+    <value />
+  </data>
 </root>
