refactor: Improve SyncErrorBar and MainWindow functionality
- Adjusted formatting in `SyncErrorBar.xaml`.
- Refactored `CheckFileButton_Click` for clarity and added logging.
- Introduced `KDrive.Converters` namespace and added `StringPathToFileNameConverter`.
- Updated `ComboBox` binding in `MainWindow.xaml` to use the new converter.
- Modified mock drives and syncs in `CommRequests.cs` for better context.
- Enhanced `SelectedSync` handling in `AppViewModel.cs`.

feat(sync): enhance localization and activity filtering

Updated `SyncActivityTable` for better localization with `x:Uid` attributes and added a checkbox for filtering incoming activities. Simplified `ViewModel` access and introduced new converters for improved data handling. Updated mock data and refined sync selection logic.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -183,4 +183,16 @@
   <data name="SyncErrorBar_button.Content" xml:space="preserve">
     <value />
   </data>
+  <data name="ActivityList_Header_Name.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ActivityList_Header_State.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ActivityList_Header_Size.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ActivityList_Header_LastLocation.Text" xml:space="preserve">
+    <value />
+  </data>
 </root>
