--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -193,4 +193,17 @@
   <data name="SyncErrorBar_button.Content" xml:space="preserve">
     <value>Vérifier les fichiers</value>
   </data>
+  <data name="ActivityList_Header_Name.Text" xml:space="preserve">
+    <value>Nom</value>
+  </data>
+  <data name="ActivityList_Header_State.Text" xml:space="preserve">
+    <value>État</value>
+  </data>
+  <data name="ActivityList_Header_Size.Text" xml:space="preserve">
+    <value>Taille</value>
+  </data>
+  <data name="ActivityList_Header_LastLocation.Text" xml:space="preserve">
+    <value>Dernier emplacement</value>
+    <comment>The parent folder of the synchronized item</comment>
+  </data>
 </root>
