feat(converters): add DateTimeToTimeAgoConverter and add elapsed time in sync activity
- Introduced DateTimeToTimeAgoConverter for human-readable time elapsed.
- Updated SyncActivityTable.xaml to utilize the new converter.
- Modified ListView layout and item template for better UI.
- Changed _outGoingActivities to ObservableCollection for flexibility.
- Enhanced SyncActivity to update ActivityTime with a timer.
- Added localization entries for time strings in Resources.resw.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -195,4 +195,19 @@
   <data name="ActivityList_Header_LastLocation.Text" xml:space="preserve">
     <value />
   </data>
+  <data name="Global_Second" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_Day" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_JustNow" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_Hour" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_Minute" xml:space="preserve">
+    <value />
+  </data>
 </root>
