feat: Add ErrorPage with navigation and localization
Updated navigation in SyncErrorBar to ErrorPage. Added ErrorPage.xaml and ErrorPage.xaml.cs for layout and logic. Included new resource entries for localization and defined HeaderTextBlockStyle in InfomaniakStyles.xaml.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -221,4 +221,7 @@
   <data name="Global_Minute" xml:space="preserve">
     <value>min</value>
   </data>
+  <data name="ErrorPage_Title.Text" xml:space="preserve">
+    <value>Éléments à vérifier</value>
+  </data>
 </root>
