--- a/src/gui4/windows/kDrive client/kDrive client/Strings/it-IT/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/it-IT/Resources.resw
@@ -210,4 +210,7 @@
   <data name="Global_Minute" xml:space="preserve">
     <value />
   </data>
+  <data name="ErrorPage_Title.Text" xml:space="preserve">
+    <value />
+  </data>
 </root>
