feat(error-page): Enhance localization.
Updated ErrorPage.xaml and related files to improve localization support with new Uid attributes

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
@@ -213,4 +213,19 @@
   <data name="ErrorPage_Title.Text" xml:space="preserve">
     <value />
   </data>
+  <data name="ErrorPage_Application_HowTosolve.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ErrorPage_Application_Title.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ErrorPage_Application_Header.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ErrorPage_Synchronisation_Header.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_SupportUrl" xml:space="preserve">
+    <value />
+  </data>
 </root>
