--- a/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/SyncErrors.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/SyncErrors.resw
@@ -117,115 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TrayIconExitApplicationCommand.Label" xml:space="preserve">
+  <data name="AppError_Cause" xml:space="preserve">
     <value />
   </data>
-  <data name="TrayIconOpenApplicationCommand.Label" xml:space="preserve">
+  <data name="AppError_HowToSolve" xml:space="preserve">
     <value />
   </data>
-  <data name="NavHome.Content" xml:space="preserve">
+  <data name="AppError_Title" xml:space="preserve">
     <value />
   </data>
-  <data name="NavActivity.Content" xml:space="preserve">
+  <data name="Global_ContactSupport" xml:space="preserve">
     <value />
   </data>
-  <data name="NavStorage.Content" xml:space="preserve">
+  <data name="Global_MoreInfo" xml:space="preserve">
     <value />
   </data>
-  <data name="NavFolder.Content" xml:space="preserve">
+  <data name="SyncPalError_HowToSolve" xml:space="preserve">
     <value />
   </data>
-  <data name="SearchBox.PlaceholderText" xml:space="preserve">
+  <data name="SyncPalError_Title" xml:space="preserve">
+    <value>Sync error</value>
+  </data>
+  <data name="SyncPalError_Cause" xml:space="preserve">
     <value />
   </data>
-  <data name="HomePage_favorites.Text" xml:space="preserve">
+  <data name="ConflictError_SolveButton" xml:space="preserve">
     <value />
   </data>
-  <data name="HomePage_trash.Text" xml:space="preserve">
+  <data name="ConflictError_Cause" xml:space="preserve">
     <value />
   </data>
-  <data name="HomePage_shared.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="KSuiteUpgradeBar_link.Content" xml:space="preserve">
-    <value />
-  </data>
-  <data name="InfomaniakWebSiteLanguageCode" xml:space="preserve">
-    <value />
-  </data>
-  <data name="UpdateAvailableBar_message.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="KSuiteUpgradeBar_message.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="UpdateAvailableBar_link.Content" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncStatusBar_PausedStatus.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncStatusBar_SyncingStatus.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncStatusBar_StartingStatus.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncStatusBar_PausingStatus.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncStatusBar_SyncedStatus.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncErrorBar_message.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="SyncErrorBar_button.Content" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ActivityList_Header_Name.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ActivityList_Header_State.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ActivityList_Header_Size.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ActivityList_Header_LastLocation.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_Second" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_Day" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_JustNow" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_Hour" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_Minute" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ErrorPage_Title.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ErrorPage_Application_HowTosolve.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ErrorPage_Application_Title.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ErrorPage_Application_Header.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ErrorPage_Synchronisation_Header.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Global_SupportUrl" xml:space="preserve">
+  <data name="ConflictError_HowToSolve" xml:space="preserve">
     <value />
   </data>
 </root>
