feat(ErrorPage): Add no errors view
Updated ErrorPage.xaml for better formatting and added a new section to display no-error messages. Introduced SupportButton_Click method for support URL navigation. Enhanced data binding visibility and added new resources in Resources.resw. Added a new SVG icon for no-errors representation.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -240,4 +240,10 @@
   <data name="Global_SupportUrl" xml:space="preserve">
     <value>https://www.infomaniak.com/fr/support/faq/admin2/kdrive</value>
   </data>
+  <data name="ErrorPage_NoErrors_Line1.Text" xml:space="preserve">
+    <value>Aucun fichier n’est à vérifier.</value>
+  </data>
+  <data name="ErrorPage_NoErrors_Line2.Text" xml:space="preserve">
+    <value>Profitez de votre journée !</value>
+  </data>
 </root>
