--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -228,4 +228,10 @@
   <data name="Global_SupportUrl" xml:space="preserve">
     <value />
   </data>
+  <data name="ErrorPage_NoErrors_Line1.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ErrorPage_NoErrors_Line2.Text" xml:space="preserve">
+    <value />
+  </data>
 </root>
