refactor(logging): enhance error handling and logging
Improved error logging and handling across converter classes and UI components in the KDrive application.
Elevated logging levels from warnings to fatal errors, replacing default return values with exceptions for invalid inputs.
Updated the Logger class to include member names in log entries for better context.
Added additional logging in UI components to track actions and unexpected calls.
Updated Resources.resw with new support and FAQ URLs.
Enhanced CommClient with error logging for connection issues and noted future improvements.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -238,6 +238,9 @@
     <comment>must end with "(" </comment>
   </data>
   <data name="Global_SupportUrl" xml:space="preserve">
+    <value>https://www.infomaniak.com/fr/support</value>
+  </data>
+  <data name="Global_FAQUrl" xml:space="preserve">
     <value>https://www.infomaniak.com/fr/support/faq/admin2/kdrive</value>
   </data>
   <data name="ErrorPage_NoErrors_Line1.Text" xml:space="preserve">
@@ -245,5 +248,11 @@
   </data>
   <data name="ErrorPage_NoErrors_Line2.Text" xml:space="preserve">
     <value>Profitez de votre journée !</value>
+  </data>
+  <data name="Global_UpgradeOfferMy_Url" xml:space="preserve">
+    <value>https://www.infomaniak.com/fr/ksuite/ksuite-pro/tarifs</value>
+  </data>
+  <data name="Global_UpgradeOfferPro_Url" xml:space="preserve">
+    <value>https://www.infomaniak.com/fr/ksuite/myksuite/tarifs</value>
   </data>
 </root>
