--- a/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
@@ -228,10 +228,19 @@
   <data name="Global_SupportUrl" xml:space="preserve">
     <value />
   </data>
+  <data name="Global_FAQUrl" xml:space="preserve">
+    <value />
+  </data>
   <data name="ErrorPage_NoErrors_Line1.Text" xml:space="preserve">
     <value />
   </data>
   <data name="ErrorPage_NoErrors_Line2.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_UpgradeOfferMy_Url" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Global_UpgradeOfferPro_Url" xml:space="preserve">
     <value />
   </data>
 </root>
