feat(ErrorPage): update UI elements and add localization
- Corrected key for BooleanToInvertedVisibilityConverter.
- Removed "Assistance technique" TextBlock and added "Learn more" button.
- Replaced HyperlinkButton with a Button for "Learn more" functionality.
- Added LearnMoreButton_Click event handler to open support URL.
- Updated Resources.resw for localized button content.
- Fixed typo in Utility.cs log message.
- Added test line in App.cs for AppErrors collection.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -255,4 +255,10 @@
   <data name="Global_UpgradeOfferPro_Url" xml:space="preserve">
     <value>https://www.infomaniak.com/fr/ksuite/ksuite-pro/tarifs</value>
   </data>
+  <data name="ErrorPage_Application_LearnMoreButton.Content" xml:space="preserve">
+    <value>En savoir plus</value>
+  </data>
+  <data name="ErrorPage_Application_SolveButton.Content" xml:space="preserve">
+    <value>Contacter le support</value>
+  </data>
 </root>
