--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -243,4 +243,10 @@
   <data name="Global_UpgradeOfferPro_Url" xml:space="preserve">
     <value />
   </data>
+  <data name="ErrorPage_Application_LearnMoreButton.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ErrorPage_Application_SolveButton.Content" xml:space="preserve">
+    <value />
+  </data>
 </root>
