feat(auth): implement OAuth authentication handling
- Updated `App.xaml.cs` to process command-line arguments for OAuth.
- Modified `Package.appxmanifest` to update publisher info and add protocol extension.
- Refactored `CommClient.cs` for clarity and async file reading.
- Added `AddOrRelogUser` method in `CommRequests.cs`.
- Created `OAuthHelper.cs` for managing OAuth token requests.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -195,9 +195,6 @@
   <data name="Page_ErrorPage_Application_Title.Text" xml:space="preserve">
     <value />
   </data>
-  <data name="Page_Page_ErrorPage_Application_Header.Text" xml:space="preserve">
-    <value />
-  </data>
   <data name="Page_ErrorPage_Synchronisation_Header.Text" xml:space="preserve">
     <value />
   </data>
@@ -242,6 +239,9 @@
   </data>
   <data name="CC_KSuiteUpgradeBar_message.Text" xml:space="preserve">
     <value />
+  </data>
+  <data name="Page_ErrorPage_Application_Header.Text" xml:space="preserve">
+    <value>c</value>
   </data>
   <data name="CC_UpdateAvailableBar_message.Text" xml:space="preserve">
     <value />
